add background color to 3column

--- a/_includes/block-three-column-1.html
+++ b/_includes/block-three-column-1.html
@@ -1,4 +1,4 @@
-<section class="block block-three-column-1">
+<section class="block block-three-column-1 three-column">
   <div class="container">
     <div class="columns">
       <div class="column">
