--- a/_includes/block-three-column-1.html
+++ b/_includes/block-three-column-1.html
@@ -1,6 +1,6 @@
 <section class="block block-three-column-1 three-column">
   <div class="container">
-    <div class="columns">
+    <div class="columns off-white">
       <div class="column">
         <h3>{{ section.col_1.headline }}</h3>
         <p>{{ section.col_1.content }}</p>
