--- a/_includes/block-three-column-1.html
+++ b/_includes/block-three-column-1.html
@@ -3,15 +3,15 @@
     <div class="columns off-white">
       <div class="column">
         <h3>{{ section.col_1.headline }}</h3>
-        <p>{{ section.col_1.content }}</p>
+        <p class="off-white">{{ section.col_1.content }}</p>
       </div>
       <div class="column">
         <h3>{{ section.col_2.headline }}</h3>
-        <p>{{ section.col_2.content }}</p>
+        <p class="off-white">{{ section.col_2.content }}</p>
       </div>
       <div class="column">
         <h3>{{ section.col_3.headline }}</h3>
-        <p>{{ section.col_3.content }}</p>
+        <p class="off-white">{{ section.col_3.content }}</p>
       </div>            
     </div>
   </div>
