center block media

--- a/_includes/block-media-1.html
+++ b/_includes/block-media-1.html
@@ -1,4 +1,4 @@
-<section id="{{ section.slug | slugify }}" class="block block-media-1">
+<section id="{{ section.slug | slugify }}" class="block block-media-1 block-media-center">
   <div class="container">
     <figure>
       <img src="{{ section.image | relative_url }}" alt="{{ section.caption }}" loading="lazy">
