--- a/_includes/block-header-2.html
+++ b/_includes/block-header-2.html
@@ -12,7 +12,7 @@
         <li class="nav-item {% if page.url == nav_item.link %}active{% endif %}"><a href="{{ nav_item.link | relative_url }}">{{ nav_item.link_text }}</a></li>
         {% endfor %}
     </ul>
-    <a class="button primary small block-header-2--cta" href="{{ section.cta.url }}">{{ section.cta.button_text }}</a>
+    <a class="button off-white orange-background small block-header-2--cta" href="{{ section.cta.url }}">{{ section.cta.button_text }}</a>
   </nav>
 
 </header>
