background color changes

--- a/_includes/block-three-column-1.html
+++ b/_includes/block-three-column-1.html
@@ -1,4 +1,4 @@
-<section class="block block-three-column-1 three-column">
+<section class="block block-three-column-1 purple-background">
   <div class="container">
     <div class="columns off-white">
       <div class="column">
