--- a/_includes/block-two-column-1.html
+++ b/_includes/block-two-column-1.html
@@ -1,4 +1,4 @@
-<section class="block block-two-column-1">
+<section class="block block-two-column-1 blue-background">
   <div class="container">
     <div class="columns">
       <div class="column">
