--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,7 +1,3 @@
-.three-column {
-  background-color: #A799B7;
-}
-
 .off-white {
   color: #F5FFEB !important;
 }
@@ -12,4 +8,12 @@
 
 .orange-background {
   background-color: #FFB15B;
+}
+
+.purple-background {
+  background-color: #A799B7;
+}
+
+.blue-background {
+  background-color: #74BED3;
 }
