background color changes

--- a/_includes/block-two-column-1.html
+++ b/_includes/block-two-column-1.html
@@ -3,11 +3,11 @@
     <div class="columns">
       <div class="column">
         <h3>{{ section.col_1.headline }}</h3>
-        <p>{{ section.col_1.content }}</p>
+        <p class="dark-grey">{{ section.col_1.content }}</p>
       </div>
       <div class="column">
         <h3>{{ section.col_2.headline }}</h3>
-        <p>{{ section.col_2.content }}</p>
+        <p class="dark-grey">{{ section.col_2.content }}</p>
       </div>           
     </div>
   </div>
