--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,6 +2,10 @@
   color: #F5FFEB !important;
 }
 
+.dark-grey {
+  color: #423E3B !important;
+}
+
 .block-media-center {
   text-align: center;
 }
