adjust block heros

--- a/_includes/block-hero-2.html
+++ b/_includes/block-hero-2.html
@@ -1,4 +1,4 @@
-<section class="block block-hero-2"
+<section class="block block-hero-2 blue-background adjust-block-hero"
 {% if section.background_image %}
 style="background-image: url('{{ section.background_image | relative_url }}')"
 {% endif %}>
