--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -21,3 +21,8 @@
 .blue-background {
   background-color: #74BED3;
 }
+
+.adjust-block-hero {
+  min-height: 100%;
+  background-position-x: center;
+}
