adjust block feature

--- a/_includes/block-feature-2.html
+++ b/_includes/block-feature-2.html
@@ -1,10 +1,10 @@
 <section id="{{ section.slug | slugify }}" class="block block-feature-2">
   <div class="container">
     <div class="columns">
-      <div class="column media">
+      <div class="column media flex-large">
           <img src="{{ section.media.image | relative_url }}" alt="{{ section.media.alt_text }}" loading="lazy">
       </div>
-      <div class="column text">
+      <div class="column text flex-small">
           <h2><span class="light">{{ section.headline }}</span></h2>
           <p>{{ section.content }}</p>
       </div>
