--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -26,3 +26,11 @@
   min-height: 100%;
   background-position-x: center;
 }
+
+.flex-large {
+  flex-basis: 55%
+}
+
+.flex-small {
+  flex-basis: 35%
+}
