--- a/_includes/block-three-column-1.html
+++ b/_includes/block-three-column-1.html
@@ -4,15 +4,17 @@
       <div class="column">
         <h3>{{ section.col_1.headline }}</h3>
         <p class="off-white">{{ section.col_1.content }}</p>
+        <a class="button primary inverted" href="{{ section.col_1.cta.url }}">{{ section.cta.button_text }}</a>
       </div>
       <div class="column">
         <h3>{{ section.col_2.headline }}</h3>
         <p class="off-white">{{ section.col_2.content }}</p>
+        <a class="button primary inverted" href="{{ section.col_2.cta.url }}">{{ section.cta.button_text }}</a>
       </div>
       <div class="column">
         <h3>{{ section.col_3.headline }}</h3>
         <p class="off-white">{{ section.col_3.content }}</p>
-        <a class="button primary inverted" href="{{ section.cta.url }}">{{ section.cta.button_text }}</a>
+        <a class="button primary inverted" href="{{ section.col_3.cta.url }}">{{ section.cta.button_text }}</a>
       </div>            
     </div>
   </div>
