--- a/_includes/block-three-column-1.html
+++ b/_includes/block-three-column-1.html
@@ -5,21 +5,21 @@
         <h3>{{ section.col_1.headline }}</h3>
         <p class="off-white">{{ section.col_1.content }}</p>
         {% if section.col_1.cta and section.col_1.cta.enabled == true %}
-        <a class="button primary inverted" href="{{ section.col_1.cta.url }}">{{ section.col_1.cta.button_text }}</a>
+        <a class="button primary inverted cta-position" href="{{ section.col_1.cta.url }}">{{ section.col_1.cta.button_text }}</a>
         {% endif %}
       </div>
       <div class="column">
         <h3>{{ section.col_2.headline }}</h3>
         <p class="off-white">{{ section.col_2.content }}</p>
         {% if section.col_2.cta and section.col_2.cta.enabled == true %}
-        <a class="button primary inverted" href="{{ section.col_2.cta.url }}">{{ section.col_2.cta.button_text }}</a>
+        <a class="button primary inverted cta-position" href="{{ section.col_2.cta.url }}">{{ section.col_2.cta.button_text }}</a>
         {% endif %}
       </div>
       <div class="column">
         <h3>{{ section.col_3.headline }}</h3>
         <p class="off-white">{{ section.col_3.content }}</p>
         {% if section.col_3.cta and section.col_3.cta.enabled == true %}
-        <a class="button primary inverted" href="{{ section.col_3.cta.url }}">{{ section.col_3.cta.button_text }}</a>
+        <a class="button primary inverted cta-position" href="{{ section.col_3.cta.url }}">{{ section.col_3.cta.button_text }}</a>
         {% endif %}
       </div>            
     </div>
