--- a/_includes/block-footer-2.html
+++ b/_includes/block-footer-2.html
@@ -1,8 +1,8 @@
 <section class="block block-footer-2">
   <div class="container">
-    <div class="columns">
+    <div class="columns footer-images">
       <div class="column">
-        <img src="{{ section.image }}" width="24" height="auto" alt="Logo">
+        <img src="{{ section.image }}" height="auto" alt="Logo">
       </div>
       <div class="column">
         {{ section.col_2 }}
