--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -22,6 +22,14 @@
   background-color: #74BED3;
 }
 
+.block-header-2--nav {
+  padding-left: 1rem;
+}
+
+.block-header-2 .nav-item {
+  padding: .4rem;
+  }
+
 .adjust-block-hero {
   min-height: 100%;
   background-position-x: center;
