--- a/_includes/block-header-2.html
+++ b/_includes/block-header-2.html
@@ -9,11 +9,10 @@
   <nav class="block-header-2--nav">
     <ul>
         {% for nav_item in section.navigation %}
-        <li class="nav-item {% if page.url == nav_item.link %}active{% endif %}"><a class="button blue-background off-white small block-header-2--cta" href="{{ nav_item.link | relative_url }}">{{ nav_item.link_text }}</a></li>
+        <li class="nav-item {% if page.url == nav_item.link %}active{% endif %} button blue-background off-white small block-header-2--cta" href="{{ nav_item.link | relative_url }}">{{ nav_item.link_text }}</li>
         {% endfor %}
-    </ul>
-    <ul>
-      <a class="button off-white orange-background small block-header-2--cta" href="{{ section.cta.url }}">{{ section.cta.button_text }}</a>
+        <li class="button off-white orange-background small block-header-2--cta" href="{{ section.cta.url }}">{{ section.cta.button_text }}>
+        </li>
     </ul>
   </nav>
 
