--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -32,8 +32,13 @@
 }
 
 .block-header-2--nav {
-  padding-left: 1rem;
   justify-content: space-around;
+}
+
+media screen and (min-width: 900px) {
+  .block-header-2--nav {
+    padding-left: 1rem;
+  }
 }
 
 @media screen and (min-width: 612px) {
@@ -47,7 +52,9 @@
   margin-bottom: .8rem;
 }
 
-
+.block-header-2 .nav-item:last-of-type {
+  margin: inherit;
+}
 
 .adjust-block-hero {
   min-height: 100%;
