--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -35,7 +35,7 @@
   justify-content: space-around;
 }
 
-media screen and (min-width: 900px) {
+@media screen and (min-width: 900px) {
   .block-header-2--nav {
     padding-left: 1rem;
   }
