--- a/_includes/block-footer-2.html
+++ b/_includes/block-footer-2.html
@@ -1,4 +1,4 @@
-<section class="block block-footer-2">
+<section id="footer" class="block block-footer-2">
   <div class="container">
     <div class="columns footer-images">
       <div class="column">
