--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -47,13 +47,28 @@
   }
 }
 
+// This needs media queries
+.block-header-2 ul {
+  display: flex;
+  justify-content: inherit;
+  align-items: inherit;
+  display: -ms-flexbox;
+  -ms-flex-align: inherit;
+  flex-wrap: wrap;
+}
+
 .block-header-2 .nav-item {
   padding: .4rem;
   margin-bottom: .8rem;
+  margin-right: 0;
 }
 
 .block-header-2 .nav-item:last-of-type {
-  margin: 2rem;
+  margin: 0;
+}
+
+.block-header-2--cta {
+  margin-left: inherit;
 }
 
 .adjust-block-hero {
