--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -48,14 +48,14 @@
 }
 
 // This needs media queries
-.block-header-2 ul {
-  display: flex;
-  justify-content: inherit;
-  align-items: inherit;
-  display: -ms-flexbox;
-  -ms-flex-align: inherit;
-  flex-wrap: wrap;
-}
+// .block-header-2--nav ul {
+//   display: flex;
+//   justify-content: inherit;
+//   align-items: inherit;
+//   display: -ms-flexbox;
+//   -ms-flex-align: inherit;
+//   flex-wrap: wrap;
+// }
 
 .block-header-2 .nav-item {
   padding: .4rem;
