--- a/_includes/block-header-2.html
+++ b/_includes/block-header-2.html
@@ -9,7 +9,7 @@
   <nav class="block-header-2--nav">
     <ul>
         {% for nav_item in section.navigation %}
-        <li class="nav-item {% if page.url == nav_item.link %}active{% endif %} button blue-background off-white small block-header-2--cta" href="{{ nav_item.link | relative_url }}">{{ nav_item.link_text }}</li>
+        <li class="nav-item button blue-background off-white small block-header-2--cta {% if page.url == nav_item.link %}active{% endif %}" href="{{ nav_item.link | relative_url }}">{{ nav_item.link_text }}</li>
         {% endfor %}
         <li class="nav-item button off-white orange-background small block-header-2--cta" href="{{ section.cta.url }}">{{ section.cta.button_text }}
         </li>
