--- a/_includes/block-three-column-1.html
+++ b/_includes/block-three-column-1.html
@@ -5,7 +5,7 @@
         <h3>{{ section.col_1.headline }}</h3>
         <p class="off-white">{{ section.col_1.content }}</p>
         {% if section.col_1.cta and section.col_1.cta.enabled == true %}
-        <a class="button primary inverted cta-position" href="{{ section.col_1.cta.url }}">{{ section.col_1.cta.button_text }}</a>
+        <a id="install" class="button primary inverted cta-position" href="{{ section.col_1.cta.url }}">{{ section.col_1.cta.button_text }}</a>
         {% endif %}
       </div>
       <div class="column">
