finish footer, adjust header spacing & sizes"

--- a/_includes/block-footer-2.html
+++ b/_includes/block-footer-2.html
@@ -1,8 +1,10 @@
 <section id="footer" class="block block-footer-2">
   <div class="container">
-    <div class="columns footer-images">
+    <div class="columns footer-images dark-grey">
       <div class="column">
-        <img src="{{ section.image }}" height="auto" alt="Logo">
+        <a href="{{ section.image_link" }}">
+          <img src="{{ section.image }}" height="auto" alt="Logo">
+        </a>
       </div>
       <div class="column">
         {{ section.col_2 }}
