--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -6,10 +6,6 @@
   color: #423E3B !important;
 }
 
-.align-center {
-  text-align: center;
-}
-
 .orange-background {
   background-color: #FFB15B;
 }
@@ -22,28 +18,37 @@
   background-color: #74BED3;
 }
 
+.align-center {
+  text-align: center;
+}
+
 .block-header-2 {
   justify-content: space-around;
   flex-wrap: wrap;
 }
 
 .block-header-2--logo {
-  padding: 2rem 0;
+  padding: 1rem 0;
+}
+
+.block-header-2--logo img {
+  max-height: 2rem;
+  }
+
+@media screen and (min-width: 700px) {
+  .block-header-2--logo img {
+    max-height: 2.5rem;
+  }
 }
 
 .block-header-2--nav {
   justify-content: space-around;
+  margin-top: .5rem;
 }
 
 @media screen and (min-width: 900px) {
   .block-header-2--nav {
     padding-left: 1rem;
-  }
-}
-
-@media screen and (min-width: 673px) {
-  .block-header-2--nav {
-    margin-top: .5rem;
   }
 }
 
@@ -100,7 +105,7 @@
 @media screen and (min-width: 700px) {
   .block-footer-2 .column {
     text-align: center;
-    flex-basis: 30%
+    flex-basis: inherit;
   }
 }
 
@@ -154,7 +159,7 @@
   }
 }
 
-@media screen and (min-width: 750px) and (max-width: 1000px) {
+@media screen and (min-width: 700px) and (max-width: 1000px) {
   .button.small {
     font-size: .75rem
   }
