--- a/_includes/block-footer-1.html
+++ b/_includes/block-footer-1.html
@@ -1,4 +1,4 @@
-<footer class="block block-footer-1">
+<footer class="block block-footer-1 dark-grey">
   <div class="container">
     <p>{{ section.content }}</p>
   </div>
