my-three-column

--- a/_includes/block-my-three-column-1.html
+++ b/_includes/block-my-three-column-1.html
@@ -1,4 +1,4 @@
-<section {% if section.col_1.cta and section.col_1.cta.enabled == true %}id="install" {% endif %} class="block block-three-column-1 purple-background">
+<section id="install" class="block block-three-column-1 purple-background">
   <div class="container">
     <div class="columns off-white">
       <div class="column">
