--- a/_includes/block-my-three-column-1.html
+++ b/_includes/block-my-three-column-1.html
@@ -1,5 +1,6 @@
-<section id="install" class="block block-three-column-1 purple-background">
+<section id="install" class="block block-three-column-1 block-my-three-column-1 purple-background">
   <div class="container">
+    <h2 class="off-white">Install Now</h2>
     <div class="columns off-white">
       <div class="column">
         <h3>{{ section.col_1.headline }}</h3>
