--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -102,6 +102,11 @@
   padding-top: 4rem;
 }
 
+.block-my-three-column-1 h2 {
+  text-align: center;
+  padding-bottom: 1rem;
+}
+
 @media screen and (min-width: 700px) {
   .block-footer-2 .column {
     text-align: center;
