--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,6 @@
     <meta name="author" content="{{ site.author }}">
     <meta name="description" content="{{ site.description }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/forestryio/ubuild-blocks@1.0.0/dist/css/ubuild.css"/>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="hanzisize-about/assets/css/styles.css">
   </head>
   <body>
