remove empty image block

--- a/_includes/block-footer-2.html
+++ b/_includes/block-footer-2.html
@@ -3,7 +3,7 @@
     <div class="columns footer-images dark-grey">
       <div class="column">
         <a href="{{ section.image_link" }}">
-          <img src="{{ section.image }}" height="auto" alt="Logo">
+          <img src="{{ section.image | relative_url  }}" height="auto" alt="Logo">
         </a>
       </div>
       <div class="column">
