--- a/_includes/block-hero-2.html
+++ b/_includes/block-hero-2.html
@@ -12,7 +12,7 @@ style="background-image: url('{{ section.background_image | relative_url }}')"
         {% endif %}
       </div>
       <div class="column media">
-        {% if section.image.image %}
+        {% if section.image %}
         <img src="{{ section.image.image | relative_url }}" alt="{{ section.image.alt_text }}" loading="lazy">
         {% endif %}
       </div>
