--- a/_includes/block-my-three-column-1.html
+++ b/_includes/block-my-three-column-1.html
@@ -1,24 +1,24 @@
-<section id="install" class="block block-three-column-1 block-my-three-column-1 purple-background">
+<section id="install" class="block block-three-column-1 block-my-three-column-text-1 purple-background">
   <div class="container">
     <h2 class="off-white">Install Now</h2>
     <div class="columns off-white">
       <div class="column">
         <h3>{{ section.col_1.headline }}</h3>
-        <p class="off-white">{{ section.col_1.content }}</p>
+        <p>{{ section.col_1.content }}</p>
         {% if section.col_1.cta and section.col_1.cta.enabled == true %}
-        <a id="install" class="button primary inverted cta-position" href="{{ section.col_1.cta.url }}">{{ section.col_1.cta.button_text }}</a>
+        <a class="button primary inverted cta-position" href="{{ section.col_1.cta.url }}">{{ section.col_1.cta.button_text }}</a>
         {% endif %}
       </div>
       <div class="column">
         <h3>{{ section.col_2.headline }}</h3>
-        <p class="off-white">{{ section.col_2.content }}</p>
+        <p>{{ section.col_2.content }}</p>
         {% if section.col_2.cta and section.col_2.cta.enabled == true %}
         <a class="button primary inverted cta-position" href="{{ section.col_2.cta.url }}">{{ section.col_2.cta.button_text }}</a>
         {% endif %}
       </div>
       <div class="column">
         <h3>{{ section.col_3.headline }}</h3>
-        <p class="off-white">{{ section.col_3.content }}</p>
+        <p>{{ section.col_3.content }}</p>
         {% if section.col_3.cta and section.col_3.cta.enabled == true %}
         <a class="button primary inverted cta-position" href="{{ section.col_3.cta.url }}">{{ section.col_3.cta.button_text }}</a>
         {% endif %}
