--- a/_includes/block-my-three-column-1.html
+++ b/_includes/block-my-three-column-1.html
@@ -4,24 +4,30 @@
     <div class="columns off-white">
       <div class="column">
         <h3>{{ section.col_1.headline }}</h3>
-        <p>{{ section.col_1.content }}</p>
-        {% if section.col_1.cta and section.col_1.cta.enabled == true %}
+        <div>
+          <a href="{{ section.col_1.image_link" }}">
+            <img src="{{ section.col_1.image | relative_url  }}" height="auto" alt="chrome">
+          </a>
+        </div>
         <a class="button primary inverted cta-position" href="{{ section.col_1.cta.url }}">{{ section.col_1.cta.button_text }}</a>
-        {% endif %}
       </div>
       <div class="column">
         <h3>{{ section.col_2.headline }}</h3>
-        <p>{{ section.col_2.content }}</p>
-        {% if section.col_2.cta and section.col_2.cta.enabled == true %}
+        <div>
+          <a href="{{ section.col_2.image_link" }}">
+            <img src="{{ section.col_2.image | relative_url  }}" height="auto" alt="firefox">
+          </a>
+        </div>
         <a class="button primary inverted cta-position" href="{{ section.col_2.cta.url }}">{{ section.col_2.cta.button_text }}</a>
-        {% endif %}
       </div>
       <div class="column">
         <h3>{{ section.col_3.headline }}</h3>
-        <p>{{ section.col_3.content }}</p>
-        {% if section.col_3.cta and section.col_3.cta.enabled == true %}
+        <div>
+          <a href="{{ section.col_3.image_link" }}">
+            <img src="{{ section.col_3.image | relative_url  }}" height="auto" alt="edge">
+          </a>
+        </div>
         <a class="button primary inverted cta-position" href="{{ section.col_3.cta.url }}">{{ section.col_3.cta.button_text }}</a>
-        {% endif %}
       </div>            
     </div>
   </div>
