--- a/_includes/block-hero-2.html
+++ b/_includes/block-hero-2.html
@@ -11,9 +11,11 @@ style="background-image: url('{{ section.background_image | relative_url }}')"
         <a class="button primary inverted" href="{{ section.cta.url }}">{{ section.cta.button_text }}</a>
         {% endif %}
       </div>
+      {% if section.image.hero_image_toggle == true %}
       <div class="column media">
-        <img src="{{ section.image.image }}" alt="{{ section.image.alt_text }}" loading="lazy">
+        <img src="{{ section.image.image | relative_url }}" alt="{{ section.image.alt_text }}" loading="lazy">
       </div>
+      {% endif %}
     </div>
   </div>
 </section>
