--- a/_includes/block-hero-2.html
+++ b/_includes/block-hero-2.html
@@ -8,14 +8,14 @@ style="background-image: url('{{ section.background_image | relative_url }}')"
         <h1><span class="light">{{ section.headline }}</span></h1>
         <p>{{ section.content }}</p>
         {% if section.cta and section.cta.enabled == true %}
-        <a class="button primary inverted" href="{{ section.cta.url }}">{{ section.cta.button_text }}</a>
+          <a class="button primary inverted" href="{{ section.cta.url }}">{{ section.cta.button_text }}</a>
         {% endif %}
       </div>
-      {% if section.image.hero_image_toggle == true %}
-      <div class="column media">
-        <img src="{{ section.image.image | relative_url }}" alt="{{ section.image.alt_text }}" loading="lazy">
+      <div class="column media"></div>
+        {% if section.image.hero_image_toggle == true %}
+          <img src="{{ section.image.image | relative_url }}" alt="{{ section.image.alt_text }}" loading="lazy">
+        {% endif %}
       </div>
-      {% endif %}
     </div>
   </div>
 </section>
