--- a/_includes/block-hero-2.html
+++ b/_includes/block-hero-2.html
@@ -11,7 +11,7 @@ style="background-image: url('{{ section.background_image | relative_url }}')"
           <a class="button primary inverted" href="{{ section.cta.url }}">{{ section.cta.button_text }}</a>
         {% endif %}
       </div>
-      <div class="column media"></div>
+      <div class="column media">
         {% if section.image.hero_image_toggle == true %}
           <img src="{{ section.image.image | relative_url }}" alt="{{ section.image.alt_text }}" loading="lazy">
         {% endif %}
