--- a/_includes/block-two-column-1.html
+++ b/_includes/block-two-column-1.html
@@ -7,12 +7,11 @@
       </div>
       <div class="column">
         <h3>{{ section.col_2.headline }}</h3>
-        <ul>
+        <p>
           {% for image in section.col_2.gallery %}
-            <li><img src="{{ image | relative_url }}"></li>
+            <img src="{{ image | relative_url }}">
           {% endfor %}
-        </ul>
-        <!-- <p class="dark-grey">{{ section.col_2.content }}</p> -->
+        </p>
       </div>           
     </div>
   </div>
