--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -102,7 +102,7 @@
   padding-top: 4rem;
 }
 
-.block-my-three-column-1 h3 {
+.block-my-three-column-text-1 h2 {
   text-align: center;
   padding-bottom: 1rem;
 }
