--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -124,6 +124,10 @@
   padding: 6rem 4rem 0rem;
 }
 
+.block-footer-2 h2 h3{
+  font-weight: 500;
+}
+
 .block-footer-2 .column {
   text-align: center;
 }
