Adjust footer padding & top border

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -140,6 +140,12 @@
   justify-content: space-evenly;
 }
 
+.block-footer-1 {
+  padding: 2rem;
+  margin-top: 4rem;
+  border-top: 2px solid black;
+}
+
 .cta-position {
   top: 1rem;
 }
